--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -729,7 +729,7 @@
         	return data;
          }
          
-         loadProfileDataIntoDOM(true, profileId, false, dataProcessor, function(){
+         loadProfileDataIntoDOM(true, profileId, false, false, dataProcessor, function(){
         	 //console.log(LeoCdpAdmin.routerContext.dataObject);
         	 editedProfileModel = LeoCdpAdmin.routerContext.dataObject;
         	 // avatar
