--- a/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
+++ b/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
@@ -31,6 +31,9 @@
 		       	<li >
 					<a href="javascript:" data-target-tab="panel_sys_services" title="System Services" > <i class="fa fa-cogs" aria-hidden="true"></i> System Services </a>
 		       	</li>
+		       	<li >
+					<a href="javascript:" data-target-tab="panel_sys_upgrade" title="Upgrade System" > <i class="fa fa-cloud-download" aria-hidden="true"></i> Download & Upgrade System </a>
+		       	</li>
 		  	</ul>
 		  	
 		  	<!-- Tab Contents  -->
@@ -62,6 +65,22 @@
 					<div class="row" id="configs_holder" >
 						<!-- list -->
 					</div>
+				</div>
+				
+				<!-- tab 3 Event Report  -->
+				<div class="tab-pane " id="panel_sys_upgrade" >
+					<div class="col-lg-9">
+		         		<h4> <i class="fa fa-cloud-download" aria-hidden="true"></i> 
+		         			<mark> To run automatically download and upgrade the system, please click "Donwload & Upgrade"</mark> </h4>
+		         	</div>
+		         	<div class="col-lg-3 text-right" >
+			         	<button type="button" class="btn btn-goto-router" onclick="callSystemControlUpgrade()" title="Upgrade System"  > 
+				     		<i class="fa fa-cloud-download" aria-hidden="true"></i> Donwload & Upgrade
+				     	</button>
+			     	</div>
+					<div class="col-lg-12" style="margin-top: 8px;">
+			            <textarea class="form-control" id="upgrade_system_logs" rows="9"></textarea>
+			        </div>
 				</div>
 			</div>
 			
