improve leo chatbot

--- a/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
@@ -37,7 +37,8 @@ div.botui-actions-buttons {
 				<div class="col-md-9" >
             		<!-- BCP-47 language code https://en.wikipedia.org/wiki/IETF_language_tag  -->
 	            	<select id="leobot_answer_in_language" class="form-control" style="display: none;">
-				      	<option value="en" selected="selected"> Answer the question in English </option>
+				      	<option value="" selected="selected"> Automatically detect the language according to question </option>
+                		<option value="en" > Answer the question in English </option>
 		                <option value="vi"> Trả lời câu hỏi bằng tiếng Việt </option>
 		                <option value="de"> Beantworten Sie Fragen auf Deutsch </option>
 		                <option value="fr"> Répondez à la question en anglais </option>
