--- a/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/leo-chatbot.html
@@ -13,6 +13,10 @@
 div.leobot-answer .botui-message-content {
     color: #000 !important;
 }
+div.leobot-answer-in-markdown .botui-message-content {
+    color: darkblue !important;
+    width: 90%;
+}
 div.leobot-info .botui-message-content {
     color: #CB4335 !important;
 }
@@ -31,7 +35,7 @@ div.botui-actions-buttons {
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title text-center"> <i class="fa fa-commenting-o"></i> LEO ChatBot </h4>
+                <h4 class="modal-title text-center"> <i class="fa fa-commenting-o"></i> LEO ChatBot - Your Smart Assistant</h4>
             </div>
             <div class="modal-body row">
 				<div class="col-md-9" >
