--- a/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
@@ -397,7 +397,7 @@
                 
                 // load profile list table
                 setTimeout(loadProfilesInSegment,700);
-                loadSystemUsersForDataAuthorization(segmentData, $('#authorizedSegmentViewers'), $('#authorizedSegmentEditors'));
+                loadSystemUsersForDataAuthorization(true, segmentData, $('#authorizedSegmentViewers'), $('#authorizedSegmentEditors'));
             } else {
                 LeoAdminApiUtil.logErrorPayload(json);
             }
@@ -427,7 +427,7 @@
                 
                 // load profile list table
                 setTimeout(loadProfilesInSegment,700);
-                loadSystemUsersForDataAuthorization(segmentData, $('#authorizedSegmentViewers'), $('#authorizedSegmentEditors'));
+                loadSystemUsersForDataAuthorization(true, segmentData, $('#authorizedSegmentViewers'), $('#authorizedSegmentEditors'));
             } else {
                 LeoAdminApiUtil.logErrorPayload(json);
             }
