--- a/resources/app-templates/leocdp-admin/modules/system/login-account-info.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-info.html
@@ -114,6 +114,7 @@
 				<!-- tab 2 Account Permissions  -->
 				<div class="tab-pane" id="panel_login_account_tab_permissions" >
 					<div class="action-div">
+						<h4 class="highlight_text"> <i class="fa fa-lock" aria-hidden="true"></i> User's Role for Permission </h4>
 	                    <div class="radio" >
 	                        <label><input type="radio" name="role" value="0" disabled="disabled" > 
 	                        	REPORT VIEWER: the login account can access Unified Analytics Hub to view summary reports </label>
