--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -304,7 +304,7 @@
 									<div class="col-lg-12" style="margin-bottom: 6px" >
 										
 										<div class="col-lg-6">
-											<input id="keywords_filter_events" class="form-control" type="text" placeholder="Enter keywords to filter events by touchpoint's name"  autocomplete="off"  >
+											<input id="keywords_filter_events" class="form-control" type="text" placeholder="Enter keywords to filter events"  autocomplete="off"  >
 										</div>
 										<div class="col-lg-6">
 											<button id="btn_filterEvents" type="button" class="btn btn-primary" onclick="loadEventsInProfile(true,false)" title="Filter event activities"  > 
