upgrade sysyem for new features

--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -13,7 +13,7 @@
 		</a>
 
 		<div style="width: 100%;">
-			<input id="main_search_profile" type="text" placeholder="Enter a name, an email or a phone number to search profile" autocomplete="off" >
+			<input id="main_search_profile" type="text" placeholder="Search customer profiles by name, email or phone number" autocomplete="off" >
 		</div>
 
 		<!-- Top User Menu -->
