--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -595,7 +595,7 @@
 				
 				<div class="form-group highlight_box col-lg-12" id="box_everyday_at_time" style="display: none" >
 		     		<div class="col-lg-5">
-		     			<label class="label_box" > <i class="fa fa-clock-o" aria-hidden="true"></i> Specific time to run service </label>
+		     			<label class="label_box" > <i class="fa fa-clock-o" aria-hidden="true"></i> Specific GMT time to run service </label>
 		     		</div>
 		     		<div class="col-lg-7">
 		     			<input type="time" id="dataServiceDateTimeStart"  placeholder="Enter specific time" class="form-control"  >
