--- a/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
@@ -117,7 +117,7 @@
 						</div>
 					</div>
 					
-					<div class="form-group row">
+					<div class="form-group row" style="display: none;" >
 						<label class="control-label col-sm-3" for="sm_indexscore">Priority score for activation</label>
 						<div class="col-sm-9">
 							<input type="number" min="1" class="form-control" id="sm_indexscore" placeholder="Enter the ranking index score for activation, less score is more priority" name="indexScore" style="width:150px" >
