fix bugs and update new features

--- a/public/html/leo-event-proxy.html
+++ b/public/html/leo-event-proxy.html
@@ -1,7 +1,7 @@
 <html>
 <!-- By Trieu Nguyen (Thomas), creator of LEOCDP.com, copyright: 2020  -->
 <head>
-<script src="https://cdn.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files/js/leo-observer/hash.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fingerprintjs2/2.1.5/fingerprint2.min.js"></script>
 </head>
 <body>
 	<div id="leoproxy" ></div>
